[package]
name = "openai-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive_builder = "0.12.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "^1.0.152", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
mockito = "0.28.0"
maplit = "1.0.2"
tokio = { version = "^1.25.0", features = ["full"] }
env_logger = "0.8.2"
serde_json = "^1.0"
